--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+// Load local properties with API keys
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
 android {
     compileSdk rootProject.compile_sdk_version
 
@@ -20,6 +24,9 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        buildConfigField("String", "UNSPLASH_ACCESS_KEY", localProperties['unsplash_access_key'])
+        buildConfigField("String", "UNSPLASH_SECRET_KEY", localProperties['unsplash_secret_key'])
     }
 
     buildTypes {
