--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ buildscript {
 
         splash_screen_version = '1.0.0'
 
+        constraint_layout_compose_version = '1.1.0-alpha04'
+
         // Accompainst
         accompainst_version = '0.27.0'
 
