--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,18 +69,18 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx_version"
 
     // Compose libs
+    implementation platform("androidx.compose:compose-bom:$bunch_of_materials_version")
     implementation "androidx.compose.compiler:compiler:$compose_compiler_version"
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.animation:animation:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.animation:animation"
+    implementation "androidx.compose.foundation:foundation"
 
     implementation "androidx.activity:activity-compose:$activity_compose_version"
 
-    implementation "androidx.compose.material:material-icons-core:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.material:material-icons-core"
+    implementation "androidx.compose.material:material-icons-extended"
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ktx_version"
@@ -123,7 +123,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:$constraint_layout_compose_version"
 
     // Accompainst libs
-    implementation "com.google.accompanist:accompanist-swiperefresh:$accompainst_version"
     implementation "com.google.accompanist:accompanist-navigation-material:$accompainst_version"
     //implementation "com.google.accompanist:accompanist-navigation-animation:$accompainst_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompainst_version"
@@ -134,7 +133,7 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$text_ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$test_espresso_version"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
 }
