--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         ktx_version = '1.9.0'
 
         // Compose
-        compose_version = '1.3.1'
+        bunch_of_materials_version = '2022.12.00'
         compose_compiler_version = '1.3.2'
         activity_compose_version = '1.6.1'
         view_model_compose_version = '2.5.1'
@@ -45,10 +45,10 @@ buildscript {
 
         splash_screen_version = '1.0.0'
 
-        constraint_layout_compose_version = '1.1.0-alpha04'
+        constraint_layout_compose_version = '1.1.0-alpha05'
 
         // Accompainst
-        accompainst_version = '0.27.0'
+        accompainst_version = '0.28.0'
 
         // Tests
         junit_version = '4.13.2'
