--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation platform("androidx.compose:compose-bom:$bunch_of_materials_version")
     implementation "androidx.compose.compiler:compiler:$compose_compiler_version"
     implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-util"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.animation:animation"
