--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '17'
         freeCompilerArgs += '-opt-in=kotlin.RequiresOptIn'
         freeCompilerArgs += '-opt-in=kotlin.Experimental'
         freeCompilerArgs += "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
@@ -61,15 +61,15 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.andrii_a.walleria'
 }
 
 dependencies {
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "androidx.core:core-ktx:$ktx_version"
 
     // Compose libs
-    implementation platform("androidx.compose:compose-bom:$bunch_of_materials_version")
+    implementation platform("androidx.compose:compose-bom:$bill_of_materials_version")
     implementation "androidx.compose.compiler:compiler:$compose_compiler_version"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-util"
