--- a/build.gradle
+++ b/build.gradle
@@ -6,49 +6,49 @@ buildscript {
         compile_sdk_version = 33
 
         // Gradle
-        gradle_version = '7.4.0'
+        gradle_version = '8.1.0'
 
         // Kotlin
-        kotlin_version = '1.7.20'
-        ktx_version = '1.9.0'
+        kotlin_version = '1.9.0'
+        ktx_version = '1.10.1'
 
         // Compose
-        bunch_of_materials_version = '2023.01.00'
-        compose_compiler_version = '1.3.2'
-        activity_compose_version = '1.6.1'
-        view_model_compose_version = '2.5.1'
-        navigation_compose_version = '2.5.3'
+        bill_of_materials_version = '2023.06.01'
+        compose_compiler_version = '1.5.0'
+        activity_compose_version = '1.7.2'
+        view_model_compose_version = '2.6.1'
+        navigation_compose_version = '2.6.0'
 
         // Lifecycle
         lifecycle_ktx_version = '2.5.1'
 
         // Dagger Hilt
-        hilt_version = '2.44.2'
+        hilt_version = '2.47'
 
         // Navigation
         hilt_navigation_version = '1.0.0'
         hilt_navigation_compose_version = '1.0.0'
 
         // Paging
-        paging_version = '3.1.1'
-        paging_version_compose = '1.0.0-alpha17'
+        paging_version = '3.2.0-rc01'
+        paging_version_compose = '3.2.0-rc01'
 
         // Retrofit + OKHttp
         retrofit_version = '2.9.0'
         okHttp_version = '5.0.0-alpha.6'
 
-        coil_version = '2.2.2'
+        coil_version = '2.4.0'
 
         datastore_version = '1.0.0'
 
-        custom_tabs_version = '1.4.0'
+        custom_tabs_version = '1.5.0'
 
-        splash_screen_version = '1.0.0'
+        splash_screen_version = '1.0.1'
 
-        constraint_layout_compose_version = '1.1.0-alpha05'
+        constraint_layout_compose_version = '1.1.0-alpha10'
 
         // Accompainst
-        accompainst_version = '0.28.0'
+        accompainst_version = '0.30.1'
 
         // Lottie
         lottieVersion = '5.2.0'
@@ -70,9 +70,14 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
+}
+
+plugins {
+    id("com.android.application") version "8.1.0" apply false
+    id("org.jetbrains.kotlin.android") version "1.9.0" apply false
 }
 
 task clean(type: Delete) {
