Migrated to type-safe navigation destinations.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ kotlinxCoroutinesTest = "1.8.1"
 lifecycleRuntimeKtx = "2.8.4"
 lifecycleViewmodelCompose = "2.8.4"
 lottieCompose = "6.5.1"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.0-rc01"
 androidGradlePlugin = "8.6.0"
 okhttp = "5.0.0-alpha.14"
 pagingCompose = "3.3.2"
@@ -33,6 +33,7 @@ retrofit = "2.11.0"
 roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
+serialization = "1.6.3"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -76,6 +77,7 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "androidGradlePlugin" }
@@ -84,3 +86,4 @@ kotlinCompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kot
 kotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kaptVersion" }
 kotlinKsp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
 daggerHiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroidGradlePlugin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinVersion" }
