Dependencies update. Fixed post update compilation issues.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-activityCompose = "1.9.1"
+activityCompose = "1.9.2"
 browser = "1.8.0"
 coil = "2.7.0"
 coilCompose = "2.7.0"
-composeBom = "2024.08.00"
-constraintlayoutCompose = "1.1.0-alpha14"
+composeBom = "2024.09.01"
+constraintlayoutCompose = "1.1.0-beta01"
 converterGson = "2.11.0"
 coreKtx = "1.13.1"
 coreSplashscreen = "1.0.1"
@@ -18,13 +18,13 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 kaptVersion = "2.0.0"
 kspVersion = "2.0.10-1.0.24"
-kotlinComposePlugin = "2.0.0"
-kotlinVersion = "2.0.0"
+kotlinComposePlugin = "2.0.20"
+kotlinVersion = "2.0.20"
 kotlinxCoroutinesTest = "1.8.1"
-lifecycleRuntimeKtx = "2.8.4"
-lifecycleViewmodelCompose = "2.8.4"
-lottieCompose = "6.5.1"
-navigationCompose = "2.8.0-rc01"
+lifecycleRuntimeKtx = "2.8.5"
+lifecycleViewmodelCompose = "2.8.5"
+lottieCompose = "6.5.2"
+navigationCompose = "2.8.0"
 androidGradlePlugin = "8.6.0"
 okhttp = "5.0.0-alpha.14"
 pagingCompose = "3.3.2"
@@ -33,7 +33,7 @@ retrofit = "2.11.0"
 roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
-serialization = "1.6.3"
+serialization = "1.7.2"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -80,10 +80,10 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "androidGradlePlugin" }
-kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinVersion" }
-kotlinCompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinComposePlugin" }
-kotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kaptVersion" }
-kotlinKsp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
-daggerHiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroidGradlePlugin" }
+android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinVersion" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinComposePlugin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kaptVersion" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
+dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroidGradlePlugin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinVersion" }
