--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,23 @@
 [versions]
-activityCompose = "1.9.3"
+activityCompose = "1.10.0"
 browser = "1.8.0"
 coil = "2.7.0"
 coilCompose = "2.7.0"
-composeBom = "2024.12.01"
+composeBom = "2025.01.00"
 constraintlayoutCompose = "1.1.0"
 converterGson = "2.11.0"
 coreKtx = "1.15.0"
 coreSplashscreen = "1.0.1"
-datastorePreferences = "1.1.1"
+datastorePreferences = "1.1.2"
 espressoCore = "3.6.1"
 hiltAndroid = "2.54"
 hiltAndroidGradlePlugin = "2.54"
 hiltCompiler = "2.54"
 hiltNavigation = "1.2.0"
-junit = "4.13.2"
 androidTestJunitVersion = "1.2.1"
+junitJupiterApi = "5.11.3"
+junitJupiterParams = "5.11.3"
+junitJupiterEngine = "5.11.3"
 kaptVersion = "2.1.0"
 kspVersion = "2.1.0-1.0.29"
 kotlinVersion = "2.1.0"
@@ -24,7 +26,7 @@ lifecycleRuntimeKtx = "2.8.7"
 lifecycleViewmodelCompose = "2.8.7"
 lottieCompose = "6.5.2"
 navigationCompose = "2.8.5"
-androidGradlePlugin = "8.7.3"
+androidGradlePlugin = "8.8.0"
 okhttp = "5.0.0-alpha.14"
 pagingCompose = "3.3.5"
 pagingRuntimeKtx = "3.3.5"
@@ -47,7 +49,6 @@ androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", vers
 androidx-foundation = { module = "androidx.compose.foundation:foundation" }
 androidx-hilt-navigation = { module = "androidx.hilt:hilt-navigation", version.ref = "hiltNavigation" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigation" }
-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidTestJunitVersion" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
@@ -61,7 +62,6 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 androidx-ui = { module = "androidx.compose.ui:ui" }
-androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
@@ -71,7 +71,10 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose"
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
-junit = { module = "junit:junit", version.ref = "junit" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidTestJunitVersion" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiterEngine" }
+junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiterParams" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junitJupiterApi" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
