--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,20 @@
 [versions]
 activityCompose = "1.10.1"
 browser = "1.8.0"
-coil = "2.7.0"
-coilCompose = "2.7.0"
+coil = "3.1.0"
 composeBom = "2025.04.01"
 constraintlayoutCompose = "1.1.1"
 coreKtx = "1.16.0"
 coreSplashscreen = "1.0.1"
-datastorePreferences = "1.1.5"
+datastorePreferences = "1.1.4"
 espressoCore = "3.6.1"
 androidTestJunitVersion = "1.2.1"
 junitJupiterApi = "5.11.4"
 junitJupiterParams = "5.11.4"
 junitJupiterEngine = "5.11.4"
 kaptVersion = "2.1.0"
-kspVersion = "2.1.0-1.0.29"
-kotlinVersion = "2.1.10"
+kspVersion = "2.1.20-1.0.32"
+kotlinVersion = "2.1.20"
 kotlinxCoroutinesTest = "1.10.1"
 lifecycleRuntimeKtx = "2.8.7"
 lifecycleViewmodelCompose = "2.8.7"
@@ -60,8 +59,10 @@ androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-ui-util = { module = "androidx.compose.ui:ui-util" }
-coil = { module = "io.coil-kt:coil", version.ref = "coil" }
-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+coil = { module = "io.coil-kt.coil3:coil", version.ref = "coil" }
+coil-compose-core = { module = "io.coil-kt.coil3:coil-compose-core", version.ref = "coil" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidTestJunitVersion" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiterEngine" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiterParams" }
