--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,8 @@
 activityCompose = "1.10.1"
 browser = "1.8.0"
 coil = "3.1.0"
-composeBom = "2025.05.01"
+composeBom = "2025.06.00"
+composeMaterial3Alpha = "1.4.0-alpha15"
 constraintlayoutCompose = "1.1.1"
 coreKtx = "1.16.0"
 coreSplashscreen = "1.0.1"
@@ -16,8 +17,8 @@ kaptVersion = "2.1.0"
 kspVersion = "2.1.20-1.0.32"
 kotlinVersion = "2.1.20"
 kotlinxCoroutinesTest = "1.10.1"
-lifecycleRuntimeKtx = "2.9.0"
-lifecycleViewmodelCompose = "2.9.0"
+lifecycleRuntimeKtx = "2.9.1"
+lifecycleViewmodelCompose = "2.9.1"
 lottieCompose = "6.5.2"
 material3AdaptiveNavigationSuiteVersion = "1.3.2"
 navigationCompose = "2.9.0"
@@ -47,7 +48,7 @@ androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtim
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-material-icons-core = { module = "androidx.compose.material:material-icons-core" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
-androidx-material3 = { module = "androidx.compose.material3:material3" }
+androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3Alpha" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
