--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,31 @@
 [versions]
 activityCompose = "1.10.1"
 browser = "1.8.0"
-coil = "3.1.0"
-composeBom = "2025.06.00"
-composeMaterial3Alpha = "1.4.0-alpha15"
+coil = "3.2.0"
+composeBom = "2025.06.01"
+composeMaterial3Alpha = "1.4.0-alpha17"
 constraintlayoutCompose = "1.1.1"
 coreKtx = "1.16.0"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.7"
 espressoCore = "3.6.1"
 androidTestJunitVersion = "1.2.1"
-junitJupiterApi = "5.11.4"
-junitJupiterParams = "5.11.4"
-junitJupiterEngine = "5.11.4"
-kaptVersion = "2.1.0"
-kspVersion = "2.1.20-1.0.32"
-kotlinVersion = "2.1.20"
-kotlinxCoroutinesTest = "1.10.1"
+junitJupiter = "5.13.2"
+kaptVersion = "2.2.0"
+kspVersion = "2.2.0-2.0.2"
+kotlinVersion = "2.2.0"
+kotlinxCoroutinesTest = "1.10.2"
 lifecycleRuntimeKtx = "2.9.1"
 lifecycleViewmodelCompose = "2.9.1"
-#lottieCompose = "6.5.2"
 material3AdaptiveNavigationSuiteVersion = "1.3.2"
-navigationCompose = "2.9.0"
-androidGradlePlugin = "8.10.1"
+navigationCompose = "2.9.1"
+androidGradlePlugin = "8.11.0"
 pagingCompose = "3.3.6"
 pagingRuntimeKtx = "3.3.6"
-roomCompiler = "2.7.1"
-roomKtx = "2.7.1"
-roomRuntime = "2.7.1"
-serialization = "1.8.0"
+room = "2.7.2"
+serialization = "1.9.0"
 ktor = "3.1.0"
-koinBom = "4.0.0"
+koinBom = "4.1.0"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -52,9 +47,9 @@ androidx-material3 = { module = "androidx.compose.material3:material3", version.
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
-androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
-androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
-androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-ui = { module = "androidx.compose.ui:ui" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
@@ -65,11 +60,10 @@ coil-compose-core = { module = "io.coil-kt.coil3:coil-compose-core", version.ref
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidTestJunitVersion" }
-junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiterEngine" }
-junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiterParams" }
-junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junitJupiterApi" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
+junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiter" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junitJupiter" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
-#lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3AdaptiveNavigationSuiteVersion" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
