--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 activityCompose = "1.10.1"
-browser = "1.8.0"
+browser = "1.9.0"
 coil = "3.3.0"
 composeBom = "2025.07.00"
-composeMaterial3Alpha = "1.4.0-alpha18"
+composeMaterial3Alpha = "1.4.0-beta01"
 constraintlayoutCompose = "1.1.1"
 coreKtx = "1.16.0"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.7"
-espressoCore = "3.6.1"
-androidTestJunitVersion = "1.2.1"
+espressoCore = "3.7.0"
+androidTestJunitVersion = "1.3.0"
 junitJupiter = "5.13.4"
 kaptVersion = "2.2.0"
 kspVersion = "2.2.0-2.0.2"
@@ -18,8 +18,8 @@ kotlinxCoroutinesTest = "1.10.2"
 lifecycleRuntimeKtx = "2.9.2"
 lifecycleViewmodelCompose = "2.9.2"
 material3AdaptiveNavigationSuiteVersion = "1.3.2"
-navigationCompose = "2.9.2"
-androidGradlePlugin = "8.11.1"
+navigationCompose = "2.9.3"
+androidGradlePlugin = "8.12.0"
 pagingCompose = "3.3.6"
 pagingRuntimeKtx = "3.3.6"
 room = "2.7.2"
