--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ activityCompose = "1.10.1"
 browser = "1.9.0"
 coil = "3.3.0"
 composeBom = "2025.07.00"
-composeMaterial3Alpha = "1.4.0-beta01"
+composeMaterial3Alpha = "1.5.0-alpha01"
 constraintlayoutCompose = "1.1.1"
 coreKtx = "1.16.0"
 coreSplashscreen = "1.0.1"
